# frontend

./: .gitignore  app.py  flake.nix  main.py  pyproject.toml
ai_xai/: .gitignore  package-lock.json  package.json
ai_xai/app/: globals.css  layout.tsx  page.tsx
ai_xai/app/predict/: page.tsx
ai_xai/app/predict/_components/: Container.tsx
ai_xai/app/upload/: page.tsx
ai_xai/components/: Header.tsx  Heading.tsx
ai_xai/consts/: urls.ts
