[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "grad-cam>=1.5.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "qrcode>=8.2",
    "uvicorn>=0.51.0",
]
